--- a/cs28_project/templates/index.html
+++ b/cs28_project/templates/index.html
@@ -2,6 +2,11 @@
 <!--
     Home page
 
+    Todo:
+        change picture responsiveness
+        buttons are not actually center; check what's going on
+        fix weird paddings (the 4 buttons)
+
     Author: Yee Hou, Teoh (2471020t)
     Filename: index.html
 -->
@@ -14,27 +19,115 @@
     Home
 {% endblock %}
 
+{% block head %}
+<style>
+    .blue-bg {
+        background-color: #003865;
+    }
+    .white {
+        color: #fefefe;
+    }
+    .div-centered {
+    text-align: left; 
+    margin: auto; 
+    width: 500px;
+    }
+    .nav-buttons {
+        height:100%;
+    }
+    .nav-buttons .fas {
+        font-size:100px;
+    }
+    .nav-buttons .btn {
+        color: #6C757D;
+    }
+
+    .welcome-text {
+        padding-left: 150px;
+        padding-right: 150px;
+    }
+
+    @media screen and (max-width: 1200px) {
+        .nav-buttons .fas{
+            font-size:70px;
+        }
+        .nav-buttons h1{
+            font-size:20px;
+        }
+    }
+</style>
+{% endblock %}
 
 {% block body_block %}
-<div class="container p-3 my-3 border">
 
-<!-- Test if login is successful -->
-{% if user.is_authenticated %}
-    <h5>You're Logged in</h5>
-{% else %}
-    <h5>You're <b>NOT</b> Logged in</h5>
-{% endif %}
-<hr style="width:100%; text-align:left; margin-left:0">
-<!-- End of temp test -->
+<!-- responsiveness abit wonky here -->
+<div class="py-5">
+    <div class="row h-100 align-items-center blue-bg">
+        <div class="welcome-text col-md-5 col-xs-12">
+            <div class="d-inline-flex white">
+                <h1>
+                    Welcome to School of Chemistry Degree calculation database!
+                </h1>
+            </div>
+        </div>
+        <div class="col-md-7 col-xs-12">
+            <img src="{% static 'pics/uni.jpg' %}"
+                    class="img-fluid"
+                    alt="Uni of Glasgow Image">
+        </div>
+    </div>
+</div>
 
-<h3>Nobody here but us chickens</h3>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+<!-- These buttons are not actually center -->
+<div class="container-fluid">    
+    <div class="row nav-buttons w-100 px-5">
+        <div class="col-md-3 col d-flex justify-content-center py-2 px-5">
+            <button class="shadow btn btn-light btn-block">
+                <h1>MANAGE</h1>
+                <br>
+
+                <i class="fas fa-cogs"></i>
+                <br>
+
+                <h5>Go to...</h5>
+            </button>
+        </div>
+
+        <div class="col-md-3 d-flex justify-content-center py-2 px-5">
+            <button class="shadow btn btn-light btn-block">
+                <h1>UPLOAD</h1>
+                <br>
+
+                <i class="fas fa-upload"></i>
+                <br>
+
+                <h5>Go to...</h5>
+            </button>
+        </div>
+
+        <div class="col-md-3 d-flex justify-content-center py-2 px-5">
+            <button class="shadow btn btn-light btn-block">
+                <h1>DEGREES</h1>
+                <br>
+
+                <i class="fas fa-graduation-cap"></i>
+                <br>
+
+                <h5>Go to...</h5>
+            </button>
+        </div>
+
+        <div class="col-md-3 d-flex justify-content-center py-2 px-5">
+            <button class="shadow btn btn-light btn-block">
+                <h1>STUDENTS</h1>
+                <br>
+
+                <i class="fas fa-book-reader"></i>
+                <br>
+
+                <h5>Go to...</h5>
+            </button>
+        </div>
+    </div>
 </div>
 {% endblock %}
