--- a/cs28_project/templates/index.html
+++ b/cs28_project/templates/index.html
@@ -6,6 +6,7 @@
         change picture responsiveness
         buttons are not actually center; check what's going on
         fix weird paddings (the 4 buttons)
+        remove the four buttons if user is not logged in
 
     Author: Yee Hou, Teoh (2471020t)
     Filename: index.html
