--- a/cs28_project/templates/login.html
+++ b/cs28_project/templates/login.html
@@ -2,6 +2,9 @@
 <!--
     Login page
 
+    todo:
+        report wrong user login details
+
     Author: Yee Hou, Teoh (2471020t)
     Filename: login.html
 -->
@@ -75,7 +78,7 @@
         <div class="clearfix">
             <label class="float-left checkbox-inline"><input type="checkbox"> Remember me</label>
             <a href="#" class="float-right">Forgot Password?</a>
-        </div>        
+        </div>
     </form>
 </div>
 {% endblock %}
