--- a/cs28_project/templates/module_marks_upload.html
+++ b/cs28_project/templates/module_marks_upload.html
@@ -4,20 +4,21 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% if messages %}
-	{% for message in messages %}
-		<div>
-			<strong>{{message|safe}}</strong>
-		</div>
-	{% endfor %}
-{% else %}
-{{order}}
-<form method="post" enctype="multipart/form-data">
-	{% csrf_token %}
-	<label>Upload a file</label>
-	<input type="file" name="file">
-	<p>Only accepts CSV files</p>
-	<button type="submit">Upload</button>
-</form>
-{% endif %}
-
+{% block body_block %}
+	{% if messages %}
+		{% for message in messages %}
+			<div>
+				<strong>{{message|safe}}</strong>
+			</div>
+		{% endfor %}
+	{% else %}
+	{{order}}
+	<form method="post" enctype="multipart/form-data">
+		{% csrf_token %}
+		<label>Upload a file</label>
+		<input type="file" name="file">
+		<p>Only accepts CSV files</p>
+		<button type="submit">Upload</button>
+	</form>
+	{% endif %}
+{% endblock %}
