--- a/cs28_project/templates/login.html
+++ b/cs28_project/templates/login.html
@@ -4,6 +4,7 @@
 
     todo:
         report wrong user login details
+        login details shows up in terminal
 
     Author: Yee Hou, Teoh (2471020t)
     Filename: login.html
@@ -20,18 +21,23 @@
         width: 400px;
         margin: 100px auto;
     }
+
     .login-form form {
         background: #fefefe;
         box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.2);
         padding: 25px 50px 50px;
     }
+
     .login-form h2 {
         margin: 0 0 25px;
     }
-    .form-control, .btn {
+
+    .form-control,
+    .btn {
         min-height: 40px;
         border-radius: 3px;
     }
+
     .btn {
         font-size: 15px;
         font-weight: bold;
@@ -41,7 +47,7 @@
 
 
 {% block title_block %}
-    Login
+Login
 {% endblock %}
 
 
