Started coding Student Module Grades page

--- a/cs28_project/templates/index.html
+++ b/cs28_project/templates/index.html
@@ -116,7 +116,7 @@
         </div>
 
         <div class="col-md-3 d-flex justify-content-center py-2 px-5">
-            <button class="shadow btn btn-light btn-block">
+            <a class="shadow btn btn-light btn-block" role="button" href="{% url 'cs28:module_grades' %}">
                 <h1>STUDENTS</h1>
                 <br>
 
@@ -124,7 +124,7 @@
                 <br>
 
                 <h5>Go to...</h5>
-            </button>
+            </a>
         </div>
     </div>
 </div>
