--- a/cs28_project/templates/base.html
+++ b/cs28_project/templates/base.html
@@ -106,6 +106,12 @@
         .text-white {
             color: #E1E9EF; /* Bluish white. Use for text */
         }
+
+        .logo {
+            height: 5;
+            width: 5;
+            /* max-height: 60px; */
+        }
     </style>
 
     <title>
@@ -140,7 +146,7 @@
                 </button>
 
                 <a class="navbar-brand pl-4" href="{% url 'cs28:index' %}">
-                    <img id="logo" class="logo" src="{% static 'icons/UoG_keyline.svg' %}" alt="UoG brand logo" />
+                    <img id="logo" class="logo" src="{% static 'icons/UoG_keyline_edited.svg' %}" height="100" alt="UoG brand logo" />
                 </a>
 
                 <!-- if the customer wants to use the other navbar option, its here. -->
