--- a/cs28_project/templates/module_grades.html
+++ b/cs28_project/templates/module_grades.html
@@ -95,6 +95,8 @@ Manage
           <tr>
             <th scope="col">Course Code</th>
             <th scope="col">Matric No.</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
             <th scope="col">Alphanumeric Grade</th>
             <th scope="col">22pt Grade</th>
 
