--- a/cs28_project/templates/index.html
+++ b/cs28_project/templates/index.html
@@ -56,7 +56,7 @@
             padding-right: 100px;
         }
         .welcome-text h1{
-            font-size:25px;
+            font-size:30px;
         }
         .btn-sq {
             width: 200px !important;
@@ -68,6 +68,34 @@
         .nav-buttons h1{
             font-size:20px;
         }
+    }
+
+    /* for carousel */
+    .carousel-img-top {
+        object-fit: cover;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 550px;
+    }
+
+    .carousel-img {
+        object-fit: cover;
+        height: 550px;
+        position: relative;
+        top: 0;
+        left: 0;
+    }
+
+    .blur{
+        filter: blur(8px);
+    }
+
+    .carousel-inner .carousel-item {
+        transition: -webkit-transform 2s ease;
+        transition: transform 2s ease;
+        transition: transform 2s ease, -webkit-transform 2s ease;
     }
 </style>
 {% endblock %}
@@ -84,10 +112,35 @@
                 </h1>
             </div>
         </div>
-        <div class="col-md-7 col-xs-12">
+        <!-- <div class="col-md-7 col-xs-12">
             <img src="{% static 'pics/uni.jpg' %}"
                     class="img-fluid"
                     alt="Uni of Glasgow Image">
+        </div> -->
+        <div class="col-md-7 col-xs-12">
+            <div id="slideshow"
+                 class="carousel slide"
+                 data-ride="carousel"
+                 data-interval="10000">
+                 <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100 carousel-img blur"
+                             src="https://www.gla.ac.uk/media/Media_718230_smxx.jpg"
+                             alt="carousel blur">
+                        <img class="d-block carousel-img-top"
+                             src="https://www.gla.ac.uk/media/Media_718230_smxx.jpg"
+                             alt="carousel top">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100 carousel-img blur"
+                             src="{% static 'pics/uni.jpg' %}"
+                             alt="carousel blur">
+                        <img class="d-block carousel-img-top"
+                             src="{% static 'pics/uni.jpg' %}"
+                             alt="carousel top">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -158,6 +211,5 @@
 
 {% block scripts %}
 <script>
-
 </script>
 {% endblock %}
