Added login test
Added test login with the following checks:

- Checks whether user is created.
- Checks whether login works
- Checks whether the correct user is logged in
- Checks whether user is redirected to home page after login

--- a/cs28_project/templates/base.html
+++ b/cs28_project/templates/base.html
@@ -132,8 +132,9 @@
     </title>
 
     <!-- tab icon -->
-    <!-- might need to edit svg to remove white border -->
     <!-- <link rel="icon" href="{% static 'icons/UoG_logo.svg' %}"> -->
+
+    <!-- icon from MyCampus -->
     <link rel="icon" href="https://sharepoint.gla.ac.uk/Style%20Library/Content/images/icons/favicon.ico">
 
 
