--- a/cs28_project/templates/module_grades_upload.html
+++ b/cs28_project/templates/module_grades_upload.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <!--
-    Upload student
-
-    Note:
-    (Teoh) Try to keep indentations consistent (the file uses 4 spaces) for tabs
-    Using tabs may look weird when combined with spaces on certain text editors
-    as tabs may be 4-spaced or 8-spaced (like gitlab)
-
-    (Teoh) Keep head contents in "block head". this includes meta, links and style
-    I have added a script block in base so if you want to move scripts to "block scripts"
-    to load the page faster, its there.
+    Module Grades Upload
 
     Todo:
     Author: Kien Welch 2371692w
-    Filename: uploadStudent.html
+			Nguyen Thanh Hieu 2401707n
+    Filename: module_grades_upload.html
 -->
 
 {% extends 'base.html' %}
