--- a/cs28_project/templates/module_grades_upload.html
+++ b/cs28_project/templates/module_grades_upload.html
@@ -13,7 +13,7 @@
 
 
 {% block title_block %}
-    Upload
+    Module Grades Upload
 {% endblock %}
 
 {% block head %}
@@ -320,7 +320,7 @@
         <div class="welcome-text col-md-5 col-xs-12 ">
             <div class="text-nowrap white">
                 <h1>
-                    Upload Student Roster
+                    Upload Module Grades
                 </h1>
             </div>
         </div>
