--- a/cs28_project/templates/module_grades.html
+++ b/cs28_project/templates/module_grades.html
@@ -4,7 +4,7 @@
 
 
 
-    Author: Ekaterina Terzieva (2403606t)
+    Author: Ekaterina Terzieva (2403606t) and Alana Grant
     Filename: module_marks.html
 -->
 
@@ -44,7 +44,7 @@
 
 
 {% block title_block %}
-Manage
+Module grades
 {% endblock %}
 
 
@@ -93,12 +93,12 @@ Manage
     <table class="table">
         <thead >
           <tr>
-            <th scope="col">Course Code</th>
-            <th scope="col">Matric No.</th>
-            <th scope="col">First Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Alphanumeric Grade</th>
-            <th scope="col">22pt Grade</th>
+            <th data-feild = "code" data-sortable="true">Course Code</th>
+            <th data-feild = "id" data-sortable="true">Matric No.</th>
+            <th data-feild = "first" data-sortable="true">First Name</th>
+            <th data-feild = "last" data-sortable="true">Last Name</th>
+            <th data-feild = "an_grade" data-sortable="true">Alphanumeric Grade</th>
+            <th data-feild = "ttpt_grade" data-sortable="true">22pt Grade</th>
 
           </tr>
         </thead>
@@ -153,30 +153,21 @@ Manage
 
 
 <!-- working progress, ignore errors for now -->
-{% block scripts %}
+<script>
 
-<script
+    var objects = [
+        {% for model in student %}
+        {
+                "code": "{{model.courseCode}}",
+                "id": "{{ model.matricNo }}",
+                "first": "{{ model.givenNames }}",
+                "last": "{{model.surname}}",
+                "an_grade": "{{model.alphanum}}",
+                "ttpt_grade": "{{model.foobar}}"
+        }
 
-    var objects = [];
-    {% for model in student %}
-        objects[] = {
-            Course Code: {{model.courseCode}}
-            Matric No: {{ model.matricNo }},
-            First Name: {{ model.givenNames }},
-            Last Name: {{model.surname}},
-            Alphanumeric Grade: {{model.alphanum}},
-            22pt Grade: {{model.}}
+        {% if not forloop.last %},{% endif %}
+        {% endfor %}
 
-        };
-
-    var $table = $('#table');
-        
-        $(function () {
-            $('#table').bootstrapTable({
-                data: objects
-            });
-        });
-
+    ];
 </script>
-
-{% endblock %}
