--- a/cs28_project/templates/module_grades.html
+++ b/cs28_project/templates/module_grades.html
@@ -152,7 +152,7 @@ Module grades
 {% endblock %}
 
 
-<!-- working progress, ignore errors for now -->
+<!-- working progress, ignore errors for now 
 <script>
 
     var objects = [
@@ -171,3 +171,4 @@ Module grades
 
     ];
 </script>
+-->
