--- a/cs28_project/templates/module_grades.html
+++ b/cs28_project/templates/module_grades.html
@@ -93,12 +93,12 @@ Module grades
     <table class="table">
         <thead >
           <tr>
-            <th data-feild = "code" data-sortable="true">Course Code</th>
-            <th data-feild = "id" data-sortable="true">Matric No.</th>
-            <th data-feild = "first" data-sortable="true">First Name</th>
-            <th data-feild = "last" data-sortable="true">Last Name</th>
-            <th data-feild = "an_grade" data-sortable="true">Alphanumeric Grade</th>
-            <th data-feild = "ttpt_grade" data-sortable="true">22pt Grade</th>
+            <th data-field = "code" data-sortable="true">Course Code</th>
+            <th data-field = "id" data-sortable="true">Matric No.</th>
+            <th data-field = "first" data-sortable="true">First Name</th>
+            <th data-field = "last" data-sortable="true">Last Name</th>
+            <th data-field = "an_grade" data-sortable="true">Alphanumeric Grade</th>
+            <th data-field = "ttpt_grade" data-sortable="true">22pt Grade</th>
 
           </tr>
         </thead>
@@ -177,6 +177,7 @@ Module grades
         $('#table').bootstrapTable({
             data: objects
         });
+    });
 
 </script>
 {% endblock %}
