--- a/cs28_project/templates/module_grades.html
+++ b/cs28_project/templates/module_grades.html
@@ -90,7 +90,8 @@ Module grades
     <hr class="w-100">
 
     <!-- Use Bootstrap table or better tables lib later -->
-    <table class="table">
+    <table class="table"
+        id = "table">
         <thead >
           <tr>
             <th data-field = "code" data-sortable="true">Course Code</th>
