Toolbar and search added

--- a/cs28_project/templates/module_grades.html
+++ b/cs28_project/templates/module_grades.html
@@ -93,10 +93,18 @@ Module grades
     <table class="table"
         id = "table"
         data-height= "700"
+        
         data-pagination="true"
         data-side-pagination="client"
         data-server-sort="false"
 
+        data-toolbar="#toolbar"
+        data-search="true"
+        data-show-refresh="true"
+        data-show-toggle="true"
+        data-show-fullscreen="true"
+        data-show-columns="true"
+        data-show-columns-toggle-all="true"
 
         >
         <thead >
