--- a/cs28_project/templates/module_grades.html
+++ b/cs28_project/templates/module_grades.html
@@ -93,7 +93,7 @@ Module grades
     <table class="table"
         id = "table"
         data-height= "700"
-        
+
         data-pagination="true"
         data-side-pagination="client"
         data-server-sort="false"
@@ -106,6 +106,7 @@ Module grades
         data-show-columns="true"
         data-show-columns-toggle-all="true"
 
+        data-show-export="true"
         >
         <thead >
           <tr>
