--- a/cs28_project/templates/base.html
+++ b/cs28_project/templates/base.html
@@ -11,7 +11,8 @@
             user controls dropdown expand inside navbar. (fix it)
 
         Author: Yee Hou, Teoh (2471020t)
-				Kien Welch 2371692w
+                Kien Welch 2371692w
+
         Filename: base.html
     -->
 
@@ -22,10 +23,20 @@
 
     <!-- move to separate css files later on -->
     <style>
+        .w-c {
+            width: 98%
+        }
         /* UOG colorway */
         .bg-uog {
             background-color: #003865;
         }
+
+        /* body { */
+            /* set minimum content width when resizing */
+            /* min-width: 1000px;
+            width: auto !important;
+            width: 1000px; for IE6 */
+        /* } */
 
         body {
             /* Temporary font... MyGlasgow uses nimbus sans and recommenced font
@@ -34,6 +45,8 @@
             font-family: Arial, Helvetica, sans-serif;
             color: #212529;
             background-color: #EBF1F5 !important;
+
+            padding-top: 40px;
             padding-bottom: 100px;
         }
 
@@ -81,15 +94,6 @@
         .navbar input {
             background-color: #E1E9EF;
         }
-        .sidebar {
-            position: fixed;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            z-index: 100; /* Behind the navbar */
-            padding: 48px 0 0; /* Height of navbar */
-            box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-        }
 
         .bg-blue {
             background-color: #005398;
@@ -110,18 +114,92 @@
             padding-bottom: 0 !important;
         }
 
-        body {
-            /* set minimum content width when resizing */
-            /* min-width: 1000px;
-            width: auto !important;
-            width: 1000px;*/ /* for IE6 */
-            padding-top: 60px;
-        }
-
         @media (max-width: 1000px) {
             body {
                 padding-top: 80px;
             }
+        }
+
+        .navbar .form-control {
+            padding: 1rem 1rem;
+            border-width: 0;
+        }
+
+        /* sidebar */
+        .wrapper {
+            display: flex;
+            width: 100%;
+        }
+
+        #sidebar {
+            width: 250px;
+
+            height: 100vh;
+
+            position: fixed;
+            top: 20;
+            left: 0;
+            z-index: 999;
+
+            background:#003865;
+            color: #fefefe;
+
+            transition: all 0.3s;
+        }
+
+        #sidebar ul.components {
+            padding: 20px 0;
+        }
+
+        ul ul a {
+            font-size: 0.9em !important;
+            padding-left: 30px !important;
+        }
+
+        #sidebar.active {
+            min-width: 75px;
+            max-width: 75px;
+            min-height: 100vh;
+        }
+
+        #sidebar ul li a {
+            text-align: left;
+        }
+
+        #sidebar.active ul li a {
+            padding: 20px 10px;
+            text-align: center;
+            font-size: 0.85em;
+        }
+
+        #sidebar.active ul li a i {
+            margin-right:  0;
+            display: block;
+            font-size: 1.8em;
+            margin-bottom: 5px;
+        }
+
+        #sidebar.active ul ul a {
+            padding: 10px !important;
+        }
+
+        /* body block */
+        #bodyBlock {
+            width: calc(100% - 250px);
+            position: absolute;
+            min-height: 100vh;
+            transition: all 0.3s;
+            top: 60;
+            right: 0;
+        }
+
+        #bodyBlock.active {
+            width: calc(100% - 75px);
+            position: absolute;
+            min-height: 100vh;
+            transition: all 0.3s;
+            top: 60;
+            right: 0;
         }
     </style>
 
@@ -146,6 +224,8 @@
     <!-- bootstrap table -->
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css">
 
+    <!-- scrollbar -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
     <!-- for page specific heads -->
     {% block head %}
 
@@ -158,7 +238,9 @@
             <!-- todo: brand redirects to index 
                            edit svg to include School of Chemistry Database -->
             <div class="d-flex flex-grow-1">
-                <button class="btn">
+                <button class="btn"
+                        type="button"
+                        id="collapseSidebar">
                     <i class="fas fa-bars p-0"></i>
                 </button>
 
@@ -191,108 +273,157 @@
             <div>
                 <ul class="navbar-nav navbar-right">
                     {% if user.is_authenticated %}
-                    {% if user.is_superuser or user.is_staff %}
-                        <li class="d-none d-lg-block nav-item">
-                            <a class="nav-link" href="{% url 'admin:index' %}">Admin page</a>
-                        </li>
-                    {% endif %}
+                        {% if user.is_superuser or user.is_staff %}
+                            <li class="d-none d-lg-block nav-item">
+                                <a class="nav-link" href="{% url 'admin:index' %}">Admin page</a>
+                            </li>
+                        {% endif %}
                         <li class="d-none d-lg-block nav-item active">
                             <a class="nav-link" href="#">Hi {{ user.username }}</a>
                         </li>
                         <li class="d-none d-lg-block nav-item">
                             <a class="nav-item nav-link" href="{% url 'cs28:logout' %}">Logout</a>
                         </li>
+                        <li class="d-lg-none nav-item dropdown">
+                            <a class="nav-link dropdown-toggle"
+                               href="#"
+                               id="navbarDropdown"
+                               role="button"
+                               data-toggle="dropdown"
+                               aria-haspopup="true"
+                               aria-expanded="false">
+                            {{ user.username }}
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                {% if user.is_superuser or user.is_staff %}
+                                    <a class="dropdown-item" href="#">Admin page</a>
+                                    <div class="dropdown-divider"></div>
+                                {% endif %}
+                                <a class="dropdown-item" href="{% url 'cs28:logout' %}">Logout</a>
+                            </div>
+                        </li>
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-item nav-link" href="{% url 'cs28:login' %}">Login</a>
                         </li>
                     {% endif %}
-
-                    <li class="d-lg-none nav-item dropdown">
-                        <a class="nav-link dropdown-toggle"
-                           href="#"
-                           id="navbarDropdown"
-                           role="button"
-                           data-toggle="dropdown"
-                           aria-haspopup="true"
-                           aria-expanded="false">
-                        {{ user.username }}
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            {% if user.is_superuser or user.is_staff %}
-                                <a class="dropdown-item" href="#">Admin page</a>
-                                <div class="dropdown-divider"></div>
-                            {% endif %}
-                            <a class="dropdown-item" href="{% url 'cs28:logout' %}">Logout</a>
-                        </div>
-                    </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <!-- <div class="row"> -->
-        <!-- <div class="col-md-1 d-none d-md-block bg-uog sidebar">
+    <!-- <div class="row">
+        <div class="col-md-1 d-none d-md-block bg-uog sidebar">
             <div class="sidebar-sticky">
 
             </div>
         </div> -->
-        <!-- body block -->
         <!-- <main role="main" id="bodyContent" class="col-md-9 ml-sm-auto col-lg-11 px-4"> -->
-        <div>
-            {% block body_block %}
+        <div class="wrapper">
+            <!-- sidebar -->
+            <nav id="sidebar">
+                <ul class="list-unstyled components">
+                    <!-- home -->
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-home"></i>
+                            Home
+                        </a>
+                    </li>
 
-            {% endblock %}
-        </div>
-                <!-- todo: center elements like in figma prototype -->
+                    <!-- degree -->
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-graduation-cap"></i>
+                            Degree
+                        </a>
+                    </li>
+                    <!-- students -->
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-book-reader"></i>
+                            Students
+                        </a>
+                    </li>
+                    <!-- manage -->
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-cogs"></i>
+                            Manage
+                        </a>
+                    </li>
+                    <!-- upload -->
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-upload"></i>
+                            Upload
+                        </a>
+                    </li>
+                    <!-- sign out -->
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-sign-out-alt"></i>
+                            Sign out
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+            <!-- body block -->
+            <div id="bodyBlock">
+                {% block body_block %}
+
+                {% endblock %}
+                <footer class="page-footer font-small pt-4 footerNav">
+                    <hr class="w-c">
+                    <div class="container">
+                        <div class="container-fluid justify-content-center text-center text-md-left">
+                            <div class="row">
+                                <div class="col-md-6 mt-md-0 mb-3">
+                                    <!-- kinda hoping this would center it abit... still wonky -->
+                                    <div class="ml-5">
+                                        <ul class="list-unstyled">
+                                            <li>
+                                                <a href="{% url 'cs28:index' %}">Home</a>
+                                            </li>
+                                            <li>
+                                                <a href="{% url 'cs28:manage' %}">Manage and Export CSV</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Upload</a>
+                                            </li>
+                                            {% if user.is_superuser or user.is_staff %}
+                                            <li>
+                                                <a href="{% url 'admin:index' %}">Admin Page</a>
+                                            </li>
+                                            {% endif %}
+                                        </ul>
+                                    </div>
+                                </div>
             
-        <!-- </main> -->
-    <!-- </div> -->
-    <footer class="page-footer font-small pt-4 footerNav">
-        <hr />
-        <div class="container">
-            <div class="container-fluid justify-content-center text-center text-md-left">
-                <div class="row">
-                    <div class="col-md-6 mt-md-0 mb-3">
-                        <!-- kinda hoping this would center it abit... still wonky -->
-                        <div class="ml-5">
-                            <ul class="list-unstyled">
-                                <li>
-                                    <a href="{% url 'cs28:index' %}">Home</a>
-                                </li>
-                                <li>
-                                    <a href="{% url 'cs28:manage' %}">Manage and Export CSV</a>
-                                </li>
-                                <li>
-                                    <a href="#">Upload</a>
-                                </li>
-                                {% if user.is_superuser or user.is_staff %}
-                                <li>
-                                    <a href="{% url 'admin:index' %}">Admin Page</a>
-                                </li>
-                                {% endif %}
-                            </ul>
+                                <div class="col-md-6 mb-md-0 mb-3">
+                                    <div class="ml-5">
+                                        <h5 class="text-uppercase font-weight-bold">The School of Chemistry</h5>
+                                        <p>
+                                            Joseph Black Building<br />
+                                            University Avenue<br />
+                                            Glasgow G12 8QQ
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-
-                    <div class="col-md-6 mb-md-0 mb-3">
-                        <div class="ml-5">
-                            <h5 class="text-uppercase font-weight-bold">The School of Chemistry</h5>
-                            <p>
-                                Joseph Black Building<br />
-                                University Avenue<br />
-                                Glasgow G12 8QQ
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                </footer>
             </div>
         </div>
-    </footer>
+                <!-- todo: center elements like in figma prototype -->
+        <!-- </main>
+    </div> -->
 
 
     <!-- scripts -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
             integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -301,11 +432,23 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
-        
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $("#sidebar").mCustomScrollbar({
+                theme: "minimal"
+            });
+
+            $('#collapseSidebar').on('click', function () {
+                $('#sidebar').toggleClass('active');
+                $('#bodyBlock').toggleClass('active')
+            });
+        });
+    </script>
 
     <!-- Other scripts -->
     {% block scripts %}
-
     {% endblock %}
 </body>
 
