--- a/cs28_project/templates/index.html
+++ b/cs28_project/templates/index.html
@@ -103,7 +103,7 @@
 {% block body_block %}
 
 <!-- responsiveness abit wonky here -->
-<div class="py-5">
+<div class="pt-5 container-fluid">
     <div class="row h-100 align-items-center bg-uog">
         <div class="welcome-text col-md-5 col-xs-12">
             <div class="d-inline-flex white">
@@ -117,7 +117,7 @@
                     class="img-fluid"
                     alt="Uni of Glasgow Image">
         </div> -->
-        <div class="col-md-7 col-xs-12">
+        <div class="col-md-7 col-xs-12 pr-0">
             <div id="slideshow"
                  class="carousel slide"
                  data-ride="carousel"
@@ -146,7 +146,7 @@
 </div>
 
 <!-- These buttons are not actually center -->
-<div class="container-fluid">
+<div class="py-5 container-fluid">
     <div class="d-flex justify-content-around">
         <div class="row nav-buttons w-100 px-5">
             <div class="col-md-3 col-sm-6 col d-flex justify-content-center py-2">
