--- a/cs28_project/templates/base.html
+++ b/cs28_project/templates/base.html
@@ -326,7 +326,7 @@
     </header>
         <div class="wrapper">
             <!-- sidebar -->
-            <nav id="sidebar">
+            <nav id="sidebar" class="active">
                 <ul class="nav components flex-column">
                     <!-- home -->
                     <li class="px-1 py-2 nav-item">
@@ -374,7 +374,7 @@
             </nav>
 
             <!-- body block -->
-            <div id="bodyBlock">
+            <div id="bodyBlock" class="active">
                 {% block body_block %}
 
                 {% endblock %}
@@ -447,7 +447,7 @@
 
             $('#collapseSidebar').on('click', function () {
                 $('#sidebar').toggleClass('active');
-                $('#bodyBlock').toggleClass('active')
+                $('#bodyBlock').toggleClass('active');
             });
         });
     </script>
